<resources>
    <string name="app_name" translatable="false">MölkkyNotes</string>
    <string name="sponsoredVersion" translatable="false">no</string>
    <string name="emptyString" translatable="false" />

    <string name="tab_text_1">Players</string>
    <string name="tab_text_2">Game</string>
    <string name="tab_text_3">Score</string>
    <string name="tab_text_4">History</string>

    <!-- menu -->
    <string name="menuStartNewGame">New Game</string>
    <string name="menuPlayInTeams">Add players into teams</string>
    <string name="menuAutoForward">Move forward automatically</string>
    <string name="menuChangeStartingTeam">Change starting team</string>
    <string name="menuRules">Mölkky Rules</string>
    <string name="menuKeepScreenOn">Keep screen on</string>
    <string name="menuMaxBrightness">Max screen brightness</string>
    <string name="menuPreferences">Setup</string>
    <string name="menuPrint">Print an empty sheet</string>

    <!-- team screen -->
    <string name="teamsPlayers">Available players:</string>
    <string name="teamsWhoWillPlay">Game:</string>
    <string name="teamsAverage">~ %1$s</string>
    <string name="teamsGameInProgress">Game has started already!</string>
    <string name="teamsGameInProgressDeail">It is not possible to change teams in the middle of the game. Use the menu to start a new game.</string>
    <string name="teamsTitle">team %1$d</string>
    <string name="teamsDeletePlayer">Remove the player?</string>
    <string name="teamsDeletePlayerDetail">The player will be permanently deleted from the list.</string>

    <!-- game screen -->
    <string name="gNext">Next:</string>
    <string name="gNextScore" translatable="false">%1$d (%2$d)</string>
    <string name="gPlayersScore">%1$d (%2$d left)</string> <!-- 3 (47 left) -->
    <string name="gPlayersScoreWithWarning">%1$d (%2$d left), %3$s!</string> <!-- 3 (47 left), 2 zeros!-->
    <string name="gFoul">Foul</string> <!-- crossing the foul line -->
    <string name="gameSetupGame">Set up Mölkky</string>
    <string name="gameChangeTheHit">Change the hit?</string>
    <string name="gameChangeTheHitDetail">Do you really want to change the hit?</string>

    <!-- results screen -->
    <string name="resultsRound">Set</string>
    <string name="resultsRoundWithNumber">Set %1$d</string>
    <string name="resultsGame">Game</string>
    <string name="resultsNextRound">Next Set</string>
    <string name="resultsGameOver">End Of The Game</string>
    <string name="resultsRoundInProgress">Next set can\'t be started!</string>
    <string name="resultsRoundInProgressDetail">Current set is not finished yet.</string>
    <string name="resultsStartNewGame">Start a new game?</string>
    <string name="resultsStartNewGameDetail">End the game and start a new one.</string>
    <string name="resultsNoZeros">no zeros</string>
    <plurals name="resultsZeros">
        <item quantity="one">%1$d zero</item>
        <item quantity="other">%1$d zeros</item>
    </plurals>
    <string name="resultsExportAs">Share game record</string>

    <!-- dialogs -->
    <string name="dAddPlayer">Add new player</string>
    <string name="dEditPlayer">Edit player</string>
    <string name="dDelete">Delete</string>
    <string name="dSave">Save</string>
    <string name="dPlayersNameHint">Name</string>
    <string name="dOK">OK</string>
    <string name="dAdd">Add</string>
    <string name="dCancel">Cancel</string>
    <string name="dialogStartNewGame">Start a new game?</string>
    <string name="dialogRoundInProgress">Current set is not finished!</string>
    <string name="dialogRoundInProgressChangeTeam">It is not possible to change the starting team in the middle of the set.</string>
    <string name="dialogSetup">Game setup</string>
    <string name="dialogGoal">Goal</string>
    <string name="dialogPenaltyOver">Penalty when over goal</string>
    <string name="dialogNextSetTeamLabel">Who starts the set</string>
    <string-array name="dialogNextSetTeamValues">
        <item>Next team in order</item>
        <item>Ask</item>
    </string-array>
    <string name="dialogNextSetTeam">Who will start the set?</string>
    <string name="dialogAddPlayerToTeam">Add %1$s to:</string>
    <string name="dialogNewTeam">New team</string>
    <string name="dialogRemovePlayerFromTeam">Remove player from team</string>
    <string name="dialogPlayerInTheGame">Player is already included</string>
    <string name="dialogPlayerInTheGameDetail">The player can\'t be listed twice in one game.</string>
    <string name="dialogRules">Mölkky Rules</string>
    <string name="dialogRulesDetail">The aim of the game is to reach exactly 50 points.\n
\nAll throws are taken into account.\n
\nA pin is not considered fallen if it is leaning on another pin or on the Mölkky throwing
skittle. After a throw, fallen pins are put upright at the place where they fell.\n
\nIf one pin falls, the score is equal to the number on the skittle. When more than one skittle
falls, the score is equal the number of fallen skittles.\n
\nIf a player (team) misses (has no scores) three times in a row, he/she (it) is out of
the game with 0 points. The game ends, when the first player (or team) reaches
exactly 50 points.\n
\nIf a player (or team) scores over 50, that player’s (team’s) score is lowered to 25 points
and continues playing.\n
\nSides of the Mölkky frame are set to 45 degree angle and thrower has to leave the frame,
to the rear, if the thrower goes forward and/or sideways, in other words over the Mölkky
frame, it is a foul and throw is (the) called as a miss (0 points).\n
\nWhen the team has 37 points or more, foul will be penalized by dropping the points to 25.
    </string>
    <string name="dialogNumberOfTeams">Too many teams!</string>
    <string name="dialogNumberOfTeamsDetail">The application supports up to 10 teams in one game.</string>
    <string name="dialogNumberOfPlayers">Too many players!</string>
    <string name="dialogNumberOfPlayersDetail">The application supports up to 10 players in one game.</string>
    <string name="dialogPrintOrSend">What to do?</string>
    <string-array name="dialogPrintOrSendValues">
        <item>Print empty sheet</item>
        <item>Share/Send empty sheet</item>
    </string-array>


    <!-- history -->
    <string name="historyDelete">Delete game record?</string>
    <string name="historyDeleteDetail">The game record will be deleted permanently.</string>
    <string name="historyShare">Game Record</string>
    <string-array name="historyExports">
        <item>Share the game record</item>
        <item>Export the game record as CSV</item>
        <item>Print the game record</item>
    </string-array>


    <!-- sheets -->
    <string name="sheetTitle">Mölkky game %1$s %2$s</string>
    <string name="sheetTeams">Player/Team</string>
    <string name="sheetPoints">Points</string>
    <string name="sheetScore">Score</string>
    <string name="sheetRound">Set %1$d</string>
    <string name="sheetGame">Game</string>
    <string name="sheetTotal">Total</string>
    <string name="sheetCount">Count</string>
    <string name="sheetHits">Hits</string>
    <string name="sheetRecord">Mölkky Match Record</string>
    <string name="sheetDate">Date:</string>
    <string name="sheetPlace">Place:</string>

    <string name="promoteRate">Rate MölkkyNotes</string>
    <string name="promoteRateDetail">If you enjoy using MölkkyNotes, please take a moment to rate it. Thanks for your support!</string>
    <string name="promoteRateNow">Rate</string>
    <string name="promoteRateLater">Later</string>
    <string name="promoteRateNo">No, thanks</string>
    <string name="promoteSupport">Support MölkkyNotes</string>
    <string name="promoteSupportDetail">If you enjoy using MölkkyNotes, please consider supporting the development by buying MölkkyNotes +.</string>
    <string name="promoteSupportNow">Buy MölkkyNotes +</string>
</resources>
