<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menuNewGame"
        android:title="@string/menuStartNewGame" />
    <item
        android:id="@+id/menuChangeStartingTeam"
        android:title="@string/menuChangeStartingTeam" />
    <item
        android:id="@+id/menuPlayInTeams"
        android:checkable="true"
        android:title="@string/menuPlayInTeams" />
    <item
        android:id="@+id/menuAutoForward"
        android:checkable="true"
        android:title="@string/menuAutoForward" />
    <item
        android:id="@+id/menuKeepScreenOn"
        android:checkable="true"
        android:title="@string/menuKeepScreenOn" />
    <item
        android:id="@+id/menuMaxBrightness"
        android:checkable="true"
        android:title="@string/menuMaxBrightness" />
    <item
        android:id="@+id/menuRules"
        android:title="@string/menuRules" />
    <item
        android:id="@+id/menuPreferences"
        android:title="@string/menuPreferences" />
    <item
        android:id="@+id/menuPrint"
        android:title="@string/menuPrint" />

</menu>
